# robot-api

./: .gitignore  README.md  pyproject.toml
res/: common_keywords.resource  variables.resource
tests/: dynamic_data.robot  request_inspection.robot  response_formats.robot
utils/: env.py
